[package]
name = "webinar_axumcrud"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.46.1", features = ["full"] }
anyhow = "1.0.98"
dotenv = "0.15.0"
serde = { version = "1.0.219", features = ["derive"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite"] }
axum = "0.8.4"
once_cell = "1.21.3"

[dev-dependencies]
axum-test = "17.3.0"
